# LinkedinPy

./: .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  .sourcery.yaml  LICENSE  README.md  bandit.yaml  example.env  linkedin.py  pyproject.toml  requirements.txt  selenium_requests.py  tox.ini
autolinkedin/: __main__.py  base_linkedin.py  decorators.py  exceptions.py  linkedin.py  read_envs.py  wait.py
autolinkedin/crons/: cron_jobs.py
autolinkedin/scripts/: sample_script.py
autolinkedin/utils/: core.py
data/: user_not_preferred.txt  user_preferred.txt
linkedin/: __init__.py  linkedin.py
linkedinpy/: __main__.py  base_linkedin.py  linkedin.py  ln_settings.py  settings.py
linkedinpy/crons/: cron_jobs.py
linkedinpy/log_config/: log_config.yaml
linkedinpy/scripts/: sample_script.py
requirements/: base.txt  dev.txt
scripts/: sample_script.py
simplelinkedin/: __init__.py  __main__.py  base_linkedin.py  decorators.py  linkedin.py  ln_settings.py  selenium_requests.py  wait.py
simplelinkedin/crons/: cron_jobs.py
simplelinkedin/scripts/: sample_script.py
tests/: test_basic_function.py
utility_scripts/: bandit_util.sh  black_util.sh  codelimit_util.sh  mypy_util.sh  pre_commit_util.sh  ruff_util.sh  sourcery_utils.sh
