[tool.black]
line-length = 100
target-version = ['py36', "py37", "py38",]
experimental_string_processing = true
include = '\.pyi?$'
exclude = '''
/(
  \.toml
  |\.sh
  |\.git
  |\.ini
  |\.tox
  |Dockerfile
  |Jenkinfile
  | _build
  | dist
)/
'''

[tool.isort]
profile = 'black'
multi_line_output = 3

[tool.poetry]
name = "simplelinkedin"
version = "0.2.0"
description = "Python package to work with LinkedIn"
authors = ["Vishal Kumar Mishra <vishal.k.mishra2@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/TheConfused/LinkedIn"
repository = "https://github.com/TheConfused/LinkedIn"
keywords = ["linkedin", "simplelinkedin", "selenium", "linkedin automation"]
include = [
    "LICENSE",
]

[tool.poetry.dependencies]
python = "^3.7"
selenium = "3.141.0"
python-dotenv = "0.18.0"
toml = "0.10.2"
python-crontab = "2.5.1"
pytest-env = "^0.6.2"
simpleselenium = "^0.1.0"

[tool.poetry.dev-dependencies]
pytest = "^6.1.2"
tox = "^3.20.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
